--- a/CW-101.html
+++ b/CW-101.html
@@ -46,5 +46,7 @@
                     <li> Get a good job </li>
                     <li> Study python language </li>
                 </ul>
+				
+		<p> Hello Web Class </p>
     </body>
-</html
+</html>
