Edit on about me text and  separat CV file and about me file

--- a/project/CV.html
+++ b/project/CV.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="CSS/File.css">
-        <title> Alwaleed T. - About Me  </title> 
+        <title> Alwaleed T. - CV  </title> 
         <style>
             table, th, td {
                 border: 1px solid black;
@@ -11,11 +11,9 @@
         </style>
     </head>
     <body> 
-        <img src="imgs/profile.png" alt="Profile Image"> 
-        <p> Alwaleed S. Altammami </p>
-        <p> I'm interesting in cars specially in drag race & Off-Roads "Prerunners". Also Games such as shooting & cars. Example : MW & CS GO and for cars ( assetso cross & forza ) . My achievements : Start to learn two of biggest programs in montage and 3d "Adobe after effect & 3d Max )
-        I want to be cyber security developer & Also part time job i want to bulid a garage to modife my car and maybe one day i will have cars modifing store </p>
-        <p> Network Security Engineer</p>
+        <img src="imgs/batman.png" alt="Profile Image"> 
+        <p > Alwaleed S. Altammami </p>
+        <p >  An undergraduate network security student , seeking a position in a firm that will allow me to utilize my creativity, and passion to develop my self as an network security. Always thinking out of the box , A believer in " Happy environment generates great outcomes " . </p>
         <table border="1px" width="50%"> 
             <caption> Education </caption>
             <thead> 
@@ -23,7 +21,6 @@
                     <th> Year </th>
                     <th> Major </th>
                     <th> School </th>
-                    <th> Logo </th>
                 </tr>
             </thead>
             <tbody> 
@@ -31,21 +28,12 @@
                     <td> 2019 - 2023 </td>
                     <td> Network Necurity Engineer</td>
                     <td>  Alyamamah University </td>
-                    <td><a href="https://yu.edu.sa/" >  <img src="imgs/yu101.png" alt="UniLogo" width="100" height="100"> </a></td>
-                </tr>
                  <tr> 
-                    <td> 2014-2016 </td>
+                    <td> 2014 - 2016 </td>
                     <td> High School </td>
                     <td> Riyadh Najed School </td>                    
                 </tr>
             </tbody> 
         </table>
-            <p> My list of Gools </p>
-                <ul>
-                    <li> I graduated from the university with a baccalaureate </li>
-                    <li> Build my own garage </li>
-                    <li> Get a good job </li>
-                    <li> Study python language </li>
-                </ul>
     </body>
 </html>
