--- a/project/AboutMe.html
+++ b/project/AboutMe.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="CSS/File.css">
         <title> Alwaleed T. - About Me  </title> 
-        <style>
-        </style>
     </head>
     <body> 
-        <img src="imgs/batman.png" alt="Profile Image"> 
-        <p> Alwaleed S. Altammami </p>
+        <div class="container">
+        <img class="center main" src="imgs/batman.png" alt="Profile Image"> 
+        <p class="name" > Alwaleed S. Altammami </p>
         <p> I’m Interesting in Technology  And Cars , I hope to learn something new such like 3d Modeling and Advance Montage “Adobe Aftereffect”. Some Strange things that I like is modifying off-Road cars and have dunes cruise. </p>
            
             <p> - My list of Gools - </p>
@@ -18,5 +18,6 @@
                     <li> Build my own garage to have fun at free time </li>
                     <li> Study python language </li>
                 </ul>
+        </div>
     </body>
 </html>
